# verdigris-music-player

./: Cargo.toml  README.md  README.txt
.cargo/: config.toml
doc/: pin_mapping.ods  proto_zero_BoM.ods
doc/board/: board.kicad_pro  board.kicad_sch  board.kicad_sch-bak
src/: board.rs  bus.rs  gui.rs  hid.rs  i2s_example.rs  interrupts.rs  main.rs  old_main.rs  rtc.rs
