# Docs

# RTC:
# - https://docs.rs/ds323x/latest/ds323x/index.html

# Battery:
# - https://docs.rs/ina219/latest/ina219/index.html
# - https://github.com/scttnlsn/ina219


# TODO: Sort by name

[package]
edition = "2024"
name = "verdigris-music-player"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Non-optional dependencies. Keep these sorted by name.
bitfield = "0.14.0"
critical-section = "1.2.0"
embedded-dma = "0.2.0"
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = { version = "0.3.0", features = ["portable-atomic"] }
embedded-hal-async = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-sdmmc = { version = "0.9", features = [ "log"] }
embedded-io = "0.6.1"
# embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
frunk = {version = "0.4.1", default-features = false}
fugit = "0.3.6"
gcd = ">=2.1,<3.0"
itertools = {version = "0.13.0", default-features = false}
nb = "1.0"
paste = "1.0"
pio = "0.3.0"
rand_core = "0.6.3"
sha2-const-stable = "0.1"
usb-device = "0.3.2"
vcell = "0.1"
void = {version = "1.0.2", default-features = false}
libm = "0.2.15"
static_cell = "2.1"

# Embassy
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-futures = { version = "0.1.2" }
# embassy-usb-logger = { version = "0.5.1", path = "../../embassy-usb-logger" }
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }

# MCU
rp-hal-common = {version = "0.1.0"}
rp235x-hal-macros = {version = "0.1.0"}
rp235x-pac = {version = "0.1.0", features = ["critical-section", "rt"]}
rp235x-hal = { version = "0.3.0", features = [
    "rt",
    "critical-section-impl",
    "binary-info"
] }
cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# Peripherals
# ili9341 = "0.6.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8"
ds323x = "0.6.0"
heapless = "0.8"
ina219 = "0.2"
mipidsi = "0.9.0"

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
